# podlipkiassistantbot

./: Jenkinsfile  LICENSE  pyproject.toml  requirements.txt
.config/gspread/: main_service_account.json  test_service_account.json
bot/: __main__.py  accepted_ids.py  bot_management.py  bot_states.py  clear_row_example.py  events_plan.py  init_bot.py  my_custom_filters.py  record_event.py  secrets.py  send_action.py
bot/events_plan/: events_plan_menu.py
bot/events_plan/delete_event_module/: delete_event.py
bot/events_plan/edit_event_module/: edit_event.py
bot/events_plan/edit_event_module/edit_event_parameters/: __init__.py  edit_event_date.py  edit_event_equipment.py  edit_event_place.py  edit_event_seniors.py  edit_event_students.py  edit_event_time.py  edit_event_title.py  edit_event_visitors.py
bot/events_plan/looking_event_module/: looking_plan.py  month_plan_creator.py
bot/events_plan/record_event_module/: record_event.py
bot/handlers/: back_button_handlers.py  delete_message_handler.py
bot/middlewares/: antiflood_middleware.py
